**feat(758): enhance job progress tracking and UI improvements**
- Updated `JobInfo` and job progress calculations to accurately reflect max progress values.
- Introduced `countUnprocessedByUser` method in `RawLocationPointJdbcService` for unprocessed points tally.
- Enhanced `JobMetadataRepository` to include progress messages and numerical progress tracking.
- Refactored `LocationDataCleanupJob` to replace task scheduling with task enqueueing.
- Improved `ProcessingPipelineTrigger` to update job progress dynamically during batch processing.
- Streamlined `JobStatusController` to better handle parent and child jobs, with enhanced UI logic.
- Added average runtime estimation for pending jobs.